--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -705,6 +705,8 @@
     "keywordDescription": "Search keyword in plain HTML or JSON response. The search is case-sensitive.",
     "invertKeywordDescription": "Look for the keyword to be absent rather than present.",
     "jsonQueryDescription": "Parse and extract specific data from the server's JSON response using JSON query or use \"$\" for the raw response, if not expecting JSON. The result is then compared to the expected value, as strings. See {0} for documentation and use {1} to experiment with queries.",
+    "jsonJavaScriptDescription": "Do not modify the function signature (method name, argument name).",
+    "JsonJavaScriptRequired": "Please fill JavaScript for this monitor.",
     "backupDescription": "You can backup all monitors and notifications into a JSON file.",
     "backupDescription2": "Note: history and event data is not included.",
     "backupDescription3": "Sensitive data such as notification tokens are included in the export file; please store export securely.",
@@ -1416,6 +1418,7 @@
     "GrafanaOncallURL": "Grafana Oncall URL",
     "Never": "Never",
     "Json Query": "Json Query",
+    "Json JavaScript": "Json JavaScript",
     "System Service": "System Service",
     "SSL/TLS": "SSL/TLS",
     "playground": "playground",
